setting up slides

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>(2) Rent 50 Molly Rose</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
   <link href="https://fonts.googleapis.com/css?family=Gochi+Hand|Work+Sans:900" rel="stylesheet">  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.0/css/bootstrap.min.css" integrity="sha384-PDle/QlgIONtM1aqA2Qemk5gPOE7wFq8+Em+G/hmo5Iq0CCmYZLv3fVRDJ4MMwEA" crossorigin="anonymous">
   <!-- <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png"> -->
@@ -18,14 +19,27 @@
 </head>
 
 <body>
-  <div class="landing starting">
+  <div class="landing starting vh-100">
       <div class="for-rent puff-in-center">
-          <p>For<br>Rent</p>
-          <div class="white-box">50 Molly Rose</div>
-        </div>
+        <p>For<br>Rent</p>
+        <div class="white-box">50 Molly Rose</div>
+      </div>
+
+      <div class="actions animated fadeInUp delay-2s">
+        <span class="address">50 Molly Rose</span>
+        <span class="city">Prosser, WA</span>
+        <a href="#features" class="btn btn-primary btn-block mt-4 d-flex justify-content-between align-items-center main-action-anchor">
+          <span></span>
+          <span>Learn More</span>
+          <i class="fas fa-arrow-right pr-2"></i>
+        </a>
+      </div>
 
   </div>
-  <div id="map"></div>
+  <div class="features vh-100" id="features"></div>
+  <div class="agreement vh-100"></div>
+  <div class="qualifications vh-100"></div>
+  <!-- <div id="map"></div>
 
 
   <script>
@@ -230,7 +244,7 @@
 
 
     }
-  </script>
+  </script> -->
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
