--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-  <div class="landing starting vh-100">
+  <div class="landing starting vh-100" id="landing">
       <div class="for-rent puff-in-center">
         <p>For<br>Rent</p>
         <div class="white-box">50 Molly Rose</div>
@@ -36,10 +36,32 @@
       </div>
 
   </div>
-  <div class="features vh-100" id="features"></div>
-  <div class="agreement vh-100"></div>
-  <div class="qualifications vh-100"></div>
-  <!-- <div id="map"></div>
+  <div class="features vh-100 d-flex flex-column justify-content-between" id="features">
+    <div></div>
+    <div>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-6">
+   
+          </div>
+          <div class="col-6"></div>
+        </div>
+      </div>
+      
+    </div>
+    <div class="footer-nav d-flex justify-content-between align-items-center">
+      <div>
+        <a href="#landing" class="btn btn-outline-primary btn-outline-primary_mod"><i class="fas fa-arrow-left mr-3"></i> Main Page</a>
+      </div>  
+      <span class="footer-title">Features & Location</span>
+      <div>
+        <a href="#agreement" class="btn btn-outline-primary btn-outline-primary_mod btn-fill">Tennant Agreement <i class="fas fa-arrow-right ml-3"></i></a>
+      </div>
+    </div>
+  </div>
+  <div class="agreement vh-100" id="agreement"></div>
+  <div class="qualifications vh-100" id="qualifications"></div>
+  
 
 
   <script>
@@ -47,193 +69,9 @@
     function initMap() {
       map = new google.maps.Map(document.getElementById('map'), {
         center: {lat: 46.193798, lng: -119.791737},
-        zoom: 13,
-        styles: [
-  {
-    "elementType": "geometry",
-    "stylers": [
-      {
-        "color": "#212121"
-      }
-    ]
-  },
-  {
-    "elementType": "labels.icon",
-    "stylers": [
-      {
-        "visibility": "off"
-      }
-    ]
-  },
-  {
-    "elementType": "labels.text.fill",
-    "stylers": [
-      {
-        "color": "#757575"
-      }
-    ]
-  },
-  {
-    "elementType": "labels.text.stroke",
-    "stylers": [
-      {
-        "color": "#212121"
-      }
-    ]
-  },
-  {
-    "featureType": "administrative",
-    "elementType": "geometry",
-    "stylers": [
-      {
-        "color": "#757575"
-      }
-    ]
-  },
-  {
-    "featureType": "administrative.country",
-    "elementType": "labels.text.fill",
-    "stylers": [
-      {
-        "color": "#9e9e9e"
-      }
-    ]
-  },
-  {
-    "featureType": "administrative.land_parcel",
-    "stylers": [
-      {
-        "visibility": "off"
-      }
-    ]
-  },
-  {
-    "featureType": "administrative.locality",
-    "elementType": "labels.text.fill",
-    "stylers": [
-      {
-        "color": "#bdbdbd"
-      }
-    ]
-  },
-  {
-    "featureType": "poi",
-    "elementType": "labels.text.fill",
-    "stylers": [
-      {
-        "color": "#757575"
-      }
-    ]
-  },
-  {
-    "featureType": "poi.park",
-    "elementType": "geometry",
-    "stylers": [
-      {
-        "color": "#181818"
-      }
-    ]
-  },
-  {
-    "featureType": "poi.park",
-    "elementType": "labels.text.fill",
-    "stylers": [
-      {
-        "color": "#616161"
-      }
-    ]
-  },
-  {
-    "featureType": "poi.park",
-    "elementType": "labels.text.stroke",
-    "stylers": [
-      {
-        "color": "#1b1b1b"
-      }
-    ]
-  },
-  {
-    "featureType": "road",
-    "elementType": "geometry.fill",
-    "stylers": [
-      {
-        "color": "#2c2c2c"
-      }
-    ]
-  },
-  {
-    "featureType": "road",
-    "elementType": "labels.text.fill",
-    "stylers": [
-      {
-        "color": "#8a8a8a"
-      }
-    ]
-  },
-  {
-    "featureType": "road.arterial",
-    "elementType": "geometry",
-    "stylers": [
-      {
-        "color": "#373737"
-      }
-    ]
-  },
-  {
-    "featureType": "road.highway",
-    "elementType": "geometry",
-    "stylers": [
-      {
-        "color": "#3c3c3c"
-      }
-    ]
-  },
-  {
-    "featureType": "road.highway.controlled_access",
-    "elementType": "geometry",
-    "stylers": [
-      {
-        "color": "#4e4e4e"
-      }
-    ]
-  },
-  {
-    "featureType": "road.local",
-    "elementType": "labels.text.fill",
-    "stylers": [
-      {
-        "color": "#616161"
-      }
-    ]
-  },
-  {
-    "featureType": "transit",
-    "elementType": "labels.text.fill",
-    "stylers": [
-      {
-        "color": "#757575"
-      }
-    ]
-  },
-  {
-    "featureType": "water",
-    "elementType": "geometry",
-    "stylers": [
-      {
-        "color": "#000000"
-      }
-    ]
-  },
-  {
-    "featureType": "water",
-    "elementType": "labels.text.fill",
-    "stylers": [
-      {
-        "color": "#3d3d3d"
-      }
-    ]
-  }
-]
+        zoom: 17,
+        mapTypeId: 'satellite'
+      
       });
 
   var marker = new google.maps.Marker({
@@ -244,7 +82,7 @@
 
 
     }
-  </script> -->
+  </script>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
